changing slides.tex

--- a/beamer/slides.tex
+++ b/beamer/slides.tex
@@ -1,25 +1,23 @@
 \documentclass{beamer}
-
-\usepackage[utf8]{inputenc}
-\usepackage{default}
-
+\usepackage[brazil]{babel}
+\usepackage[latin1]{inputenc}
 
 \usetheme{Ifrs}
 
+%\input{style-w}
 
-\title{Exemplo de ApresentaÃ§Ã£o}
+
+\title{Título da apresentação}
+
 
 \begin{document}
 
+
 \frame{\titlepage}
 
-\begin{frame}{Primeiro slide}
-blablabla
- 
+
+\begin{frame}{Título do slide}
+Conteúdo do slide
 \end{frame}
-
-git remote add origin https://github.com/maiquelb/latex_ifrs.git
-git push -u origin master
-
 
 \end{document}
