configuracoes do ambiente block

--- a/beamer/beamerthemeIfrs.sty
+++ b/beamer/beamerthemeIfrs.sty
@@ -28,6 +28,9 @@
 
 \setbeamercolor{frametitle}{fg=teal}
 
+\setbeamercolor{block title}{bg=teal,fg=white}
+\setbeamercolor{block body}{bg=teal!10}
+
 \setbeamertemplate{frametitle}
 {\vskip4pt
   \leavevmode
